deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: todo-web
  labels:
    app: todo-web
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
  type: ClusterIP
  selector:
    app: todo-web
