deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-web
  labels:
    app: todo-web
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: todo-web
    weight: 100
